# TTable

./: .clang-format  CMakeLists.txt  README.md
benchmark/: CMakeLists.txt  benchmark.cpp
tests/: CMakeLists.txt  ttableTest.cpp
ttable/: CMakeLists.txt
ttable/include/ttable/: simd.h  ttable.h
ttable/lib/: ttable.cpp
